# ApplicationQT

./: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  ComPort.cpp  ComPort.h  Enod.cpp  Enod.h  MainWindow.cpp  MainWindow.h  main.cpp  n.txt  win_and_lin.cpp
double/: CMakeLists.txt  lin.cpp  win_and_lin.cpp
